--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
 <maven.compiler.target>1.8</maven.compiler.target>
         </properties>
     <dependencies>
-
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>4.0.9</version>
+        </dependency>
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
